[package]
name    = "ndarray-linalg"
version = "0.12.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

description   = "Linear algebra package for rust-ndarray using LAPACK"
documentation = "https://docs.rs/ndarray-linalg/"
repository    = "https://github.com/rust-ndarray/ndarray-linalg"
keywords      = ["ndarray", "lapack", "matrix"]
license       = "MIT"
readme        = "README.md"
categories    = ["algorithms", "science"]

[features]
default    = []
intel-mkl  = ["lapack-src/intel-mkl", "blas-src/intel-mkl"]
netlib     = ["lapack-src/netlib", "blas-src/netlib"]
openblas   = ["lapack-src/openblas", "blas-src/openblas"]
serde-1    = ["ndarray/serde-1", "num-complex/serde"]

static          = ["openblas-static"]
openblas-static = ["openblas", "openblas-src"]

[dependencies]
lapacke = "0.2.0"
num-traits  = "0.2.11"
cauchy = "0.2.2"
num-complex = "0.2.4"
rand = "0.5"

[dependencies.ndarray]
version = "0.13.0"
features = ["blas", "approx"]
default-features = false

[dependencies.blas-src]
version = "0.6.1"
default-features = false

[dependencies.lapack-src]
version = "0.6.0"
default-features = false

[dependencies.openblas-src]
version = "0.9.0"
default-features = false
features = ["static"]
optional = true

[dev-dependencies]
paste = "0.1.9"
criterion = "0.3.1"
approx = { version = "0.3.2", features = ["num-complex"] }

[[bench]]
name = "truncated_eig"
harness = false

[[bench]]
name = "eigh"
harness = false

