[package]
name    = "ndarray-linalg"
version = "0.13.0-alpha.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

description   = "Linear algebra package for rust-ndarray using LAPACK"
documentation = "https://docs.rs/ndarray-linalg/"
repository    = "https://github.com/rust-ndarray/ndarray-linalg"
keywords      = ["ndarray", "lapack", "matrix"]
license       = "MIT"
readme        = "README.md"
categories    = ["algorithms", "science"]

[features]
default = []

netlib    = ["netlib-static"]
openblas  = ["openblas-static"]
intel-mkl = ["mkl-static-lp64-seq"]

netlib-static = ["netlib-src/static"]
netlib-system = ["netlib-src/system"]
openblas-static = ["openblas-src/static"]
openblas-system = ["openblas-src/system"]

mkl-static-lp64-iomp   = ["intel-mkl-src/mkl-static-lp64-iomp"]
mkl-static-lp64-seq    = ["intel-mkl-src/mkl-static-lp64-seq"]
mkl-dynamic-lp64-iomp  = ["intel-mkl-src/mkl-dynamic-lp64-iomp"]
mkl-dynamic-lp64-seq   = ["intel-mkl-src/mkl-dynamic-lp64-seq"]

[dependencies]
cauchy = "0.2.2"
lapacke = "0.2.0"
ndarray = { version = "0.13", features = ["blas", "approx", "serde-1"], default-features = false }
num-complex = { version = "0.2", features = ["serde"] }
num-traits  = "0.2.11"
rand = "0.5"

openblas-src  = { version = "0.9.0", optional = true }
netlib-src    = { version = "0.8.0", optional = true }
intel-mkl-src = { version = "0.6.0", default-features = false, features = ["download"], optional = true }

[dev-dependencies]
paste = "0.1.9"
criterion = "0.3.1"
approx = { version = "0.3.2", features = ["num-complex"] }

[[bench]]
name = "truncated_eig"
harness = false

[[bench]]
name = "eigh"
harness = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
