[package]
name = "lax"
version = "0.16.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

description   = "LAPACK wrapper without ndarray"
documentation = "https://docs.rs/lax/"
repository    = "https://github.com/rust-ndarray/ndarray-linalg"
keywords      = ["lapack", "matrix"]
license       = "MIT OR Apache-2.0"
readme        = "README.md"
categories    = ["algorithms", "science"]

[features]
default = []

netlib    = ["netlib-static"]
openblas  = ["openblas-static"]
intel-mkl = ["intel-mkl-static"]

netlib-static = ["netlib-src/static"]
netlib-system = ["netlib-src/system"]

openblas-static = ["openblas-src/static"]
openblas-system = ["openblas-src/system"]

intel-mkl-static = ["intel-mkl-src/mkl-static-lp64-seq"]
intel-mkl-system = ["intel-mkl-src/mkl-dynamic-lp64-seq"]

[dependencies]
thiserror = "1.0.24"
cauchy = "0.4.0"
num-traits = "0.2.14"
lapack-sys = "0.14.0"
katexit = "0.1.2"
libc = "0.2.142"

[dependencies.intel-mkl-src]
version = "0.8.1"
default-features = false
optional = true

[dependencies.netlib-src]
version = "0.8.0"
optional = true
features = ["cblas"]
default-features = false

[dependencies.openblas-src]
version = "0.10.4"
optional = true
default-features = false
features = ["cblas"]
