[package]
name = "lax"
version = "0.18.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2021"

description   = "LAPACK wrapper without ndarray"
documentation = "https://docs.rs/lax/"
repository    = "https://github.com/rust-ndarray/ndarray-linalg"
keywords      = ["lapack", "matrix"]
license       = "MIT OR Apache-2.0"
readme        = "README.md"
categories    = ["algorithms", "science"]

[features]
default = []

netlib    = ["netlib-static"]
openblas  = ["openblas-static"]
intel-mkl = ["intel-mkl-static-lp64-seq"]

netlib-static = ["netlib-src/static"]
netlib-system = ["netlib-src/system"]

openblas-static = ["openblas-src/static"]
openblas-system = ["openblas-src/system"]

intel-mkl-static = ["intel-mkl-src/mkl-static-lp64-seq"] # deprecated, use intel-mkl-static-lp64-seq instead
intel-mkl-system = ["intel-mkl-src/mkl-dynamic-lp64-seq"] # deprecated, use intel-mkl-dynamic-lp64-seq instead

intel-mkl-dynamic-ilp64-iomp = ["intel-mkl-src/mkl-dynamic-ilp64-iomp"]
intel-mkl-dynamic-ilp64-seq = ["intel-mkl-src/mkl-dynamic-ilp64-seq"]
intel-mkl-dynamic-lp64-iomp = ["intel-mkl-src/mkl-dynamic-lp64-iomp"]
intel-mkl-dynamic-lp64-seq = ["intel-mkl-src/mkl-dynamic-lp64-seq"]
intel-mkl-static-ilp64-iomp = ["intel-mkl-src/mkl-static-ilp64-iomp"]
intel-mkl-static-ilp64-seq = ["intel-mkl-src/mkl-static-ilp64-seq"]
intel-mkl-static-lp64-iomp = ["intel-mkl-src/mkl-static-lp64-iomp"]
intel-mkl-static-lp64-seq = ["intel-mkl-src/mkl-static-lp64-seq"]

[dependencies]
thiserror = "2.0.0"
cauchy = {git="https://github.com/Dirreke/cauchy.git", branch="bump-rand"}
num-traits = "0.2.14"
lapack-sys = "0.15.0"
katexit = "0.1.2"

[dependencies.intel-mkl-src]
version = "0.8.1"
default-features = false
optional = true

[dependencies.netlib-src]
version = "0.9.0"
optional = true
features = ["cblas"]
default-features = false

[dependencies.openblas-src]
version = "0.10.4"
optional = true
default-features = false
features = ["cblas"]
