[package]
name    = "ndarray-linalg"
version = "0.17.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2021"

description   = "Linear algebra package for rust-ndarray using LAPACK"
documentation = "https://docs.rs/ndarray-linalg/"
repository    = "https://github.com/rust-ndarray/ndarray-linalg"
keywords      = ["ndarray", "lapack", "matrix"]
license       = "MIT OR Apache-2.0"
readme        = "../README.md"
categories    = ["algorithms", "science"]

[features]
default   = ["blas"]
blas      = ["ndarray/blas"]

netlib    = ["lax/netlib"]
openblas  = ["lax/openblas"]
intel-mkl = ["lax/intel-mkl-static-lp64-seq"]

netlib-static   = ["lax/netlib-static"]
netlib-system   = ["lax/netlib-system"]

openblas-static = ["lax/openblas-static"]
openblas-system = ["lax/openblas-system"]

intel-mkl-static = ["lax/intel-mkl-static"]  # deprecated, use intel-mkl-static-lp64-seq instead
intel-mkl-system = ["lax/intel-mkl-system"]  # deprecated, use intel-mkl-dynamic-lp64-seq instead

intel-mkl-dynamic-ilp64-iomp = ["lax/intel-mkl-dynamic-ilp64-iomp"]
intel-mkl-dynamic-ilp64-seq = ["lax/intel-mkl-dynamic-ilp64-seq"]
intel-mkl-dynamic-lp64-iomp = ["lax/intel-mkl-dynamic-lp64-iomp"]
intel-mkl-dynamic-lp64-seq = ["lax/intel-mkl-dynamic-lp64-seq"]
intel-mkl-static-ilp64-iomp = ["lax/intel-mkl-static-ilp64-iomp"]
intel-mkl-static-ilp64-seq = ["lax/intel-mkl-static-ilp64-seq"]
intel-mkl-static-lp64-iomp = ["lax/intel-mkl-static-lp64-iomp"]
intel-mkl-static-lp64-seq = ["lax/intel-mkl-static-lp64-seq"]

[dependencies]
cauchy = "0.4.0"
katexit = "0.1.2"
num-complex = "0.4.0"
num-traits  = "0.2.14"
rand = "0.8.3"
thiserror = "2.0.0"

[dependencies.ndarray]
version = "0.17.1"
features = ["approx", "std"]
default-features = false

[dependencies.lax]
version = "0.17.0"
path = "../lax"
default-features = false

[dev-dependencies]
paste = "1.0.5"
criterion = "0.5.1"
# Keep the same version as ndarray's dependency!
approx = { version = "0.5", features = ["num-complex"] }
rand_pcg = "0.3.1"

[[bench]]
name = "truncated_eig"
harness = false

[[bench]]
name = "eig"
harness = false

[[bench]]
name = "eigh"
harness = false

[[bench]]
name = "qr"
harness = false

[[bench]]
name = "svd"
harness = false

[[bench]]
name = "solve"
harness = false

[[bench]]
name = "solveh"
harness = false
